@@ -8,6 +8,10 @@ is also provided AS IS and is probably completely unreadable.
 ------------------------------------------------------------------------------------
 July 14 2004 Heikki Sairanen <firstname.lastname@tut.fi>
 
+	* Vladimir works
+
+July 14 2004 Heikki Sairanen <firstname.lastname@tut.fi>
+
 	* Vladimir works better, but far from perfect
 	
 
